WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303981
SpeculationRules - hidden links should not be prefetched
https://bugs.webkit.org/show_bug.cgi?id=303981
Summary
SpeculationRules - hidden links should not be prefetched
Yoav Weiss
Reported
2025-12-11 00:58:10 PST
Currently hidden links in document rules are being prefetched. We should fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Yoav Weiss
Comment 1
2025-12-11 01:00:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55236
EWS
Comment 2
2025-12-15 13:00:03 PST
Committed
304472@main
(652c5fd0762e): <
https://commits.webkit.org/304472@main
> Reviewed commits have been landed. Closing PR #55236 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-15 13:01:13 PST
<
rdar://problem/166563053
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug