SpeculationRules - do not prefetch hidden links https://bugs.webkit.org/show_bug.cgi?id=303981

Reviewed by Alex Christensen.

The speculation rules spec states that hidden links should not be prefetched.
This PR aligns the implementation to the spec on that front.

No new tests, but progression on existing tests.

* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/document-rules.https_include=selectorMatchesDisplayLocked-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/document-rules.https_include=selectorMatchesDisplayNone-expected.txt: Progression.
* LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/document-rules.https_include=unslottedLink-expected.txt: Progression.
* Source/WebCore/dom/SpeculationRulesMatcher.cpp:
(WebCore::isUnslottedElement): Return true if the element is part of a shadow DOM and has no slot.
(WebCore::SpeculationRulesMatcher::hasMatchingRule): Check the element visibility and if it's unslotted before prefetching its url.
* Source/WebCore/html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::insertedIntoAncestor): Schedule post-insertaion callback.
(WebCore::HTMLAnchorElement::didFinishInsertingNode): Check speculation rules post-insertion.
* Source/WebCore/html/HTMLAnchorElement.h:

Canonical link: https://commits.webkit.org/304472@main