Source/WebCore/html/HTMLAnchorElement.h
@@ -83,6 +83,7 @@ public:
     ReferrerPolicy referrerPolicy() const;
 
     Node::InsertedIntoAncestorResult insertedIntoAncestor(InsertionType, ContainerNode& parentOfInsertedTree) override;
+    void didFinishInsertingNode() override;
 
     AtomString target() const override;
 
